--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -37,7 +37,7 @@
                                                 </div>
                                                 <div class="input-field col s12">
                                                     <h:inputSecret id="password" required="true" requiredMessage="Se necesita la clave para continuar"/>
-                                                    <h:outputLabel for="password" value="la Clave"/>
+                                                    <h:outputLabel for="password" value="la Clave parcero"/>
                                                 </div>
                                                 <div class="input-field col s12">
                                                     <input type="checkbox" id="mantenerLogin" />
