--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -25,6 +25,8 @@
         <h:link outcome="login" value="Inicio de Sesion" />
         <br />
         <h:link outcome="programaLab" value="Programar Laboratorio" />
+        <br/>
+        <h:link outcome="generarReportes" value="Pantalla de Isaac"/>
     </h:body>
 </html>
 
