--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -26,7 +26,7 @@
         <br />
         <h:link outcome="programaLab" value="Programar Laboratorio" />
         <br/>
-        <h:link outcome="generarReportes" value="Pantalla de Isaac"/>
+        <h:link outcome="generarReportes" value="Pantalla del joven Isaac"/>
     </h:body>
 </html>
 
