--- a/web/programaLab.xhtml
+++ b/web/programaLab.xhtml
@@ -30,7 +30,7 @@
                 <li><a href="#!">Generar estadisticas de Lab</a></li>
                 <li><a href="#!">Generar estadisticas de Insumos</a></li>
                 <li><a href="#!">Generar informe de deudores</a></li>
-                <li><a href="#!">Generar archivo plano</a></li>
+                <li><a href="generarReportes.xhtml">Generar archivo plano</a></li>
             </ul> 
         </div> 
         <!--Fin de menu lateral-->  
