--- a/web/generarReportes.xhtml
+++ b/web/generarReportes.xhtml
@@ -11,7 +11,7 @@
         <br/>
         <a>Isaac Say</a>
         <p:inputText/>
-        <h:form>
+<!--        <h:form>
     <p:growl id="growl" life="2000" />
      
     <p:commandButton value="Boton de Isaac" id="ajax" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />
@@ -19,7 +19,7 @@
     <p:commandButton actionListener="#{buttonView.buttonAction}" id="iconOnly" update="growl" icon="ui-icon-disk" title="Icon Only" />
  
     <p:commandButton value="Disabled" id="disabled" disabled="true" />
-</h:form>
+</h:form>-->
     </h:body>
 </html>
 
