--- a/web/programaLab.xhtml
+++ b/web/programaLab.xhtml
@@ -15,13 +15,13 @@
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     </h:head>
-    <h:body styleClass="cyan lighten-5">
+    <h:body styleClass="cyan lighten-5" >
         <div id="menu" class="container">
 
             <!--Menu lateral!!-->
-            <ul id="slide-out" class="side-nav fixed">
-                <li><img src="http://www.usc.edu.co/USC_logo_footer.png" style="max-width: 250px"/></li>
-                <div class="input-field col s3">
+            <ul id="slide-out" class="side-nav fixed" style="width: 280px">
+                <li><img src="http://www.usc.edu.co/USC_logo_footer.png" style="max-width: 200px"/></li>
+                <div class="input-field col s1">
                     <select>
                         <option value="0" disabled='true'>Seleccione su rol</option>
                         <option value="1">Asistente</option>
@@ -31,12 +31,12 @@
                     <label>Elija Su Rol</label>
                 </div>
                 <br/>
-                <li><a class="subheader" style="font-size: x-large">Laboratorios</a></li>
+                <li><a class="subheader" style="font-size: large">Laboratorios</a></li>
                 <li><a href="#!">Programar Laboratorio</a></li>
                 <li><a href="#!">Cronograma de Laboratorio</a></li>
                 <li><a href="#!">Solicitud de Laboratorio</a></li>
                 <li><div class="divider"></div></li>
-                <li><a class="subheader" style="font-size: x-large">Reportes</a></li>
+                <li><a class="subheader" style="font-size: large">Reportes</a></li>
                 <li><a href="#!">Generar estadisticas de Lab</a></li>
                 <li><a href="#!">Generar estadisticas de Insumos</a></li>
                 <li><a href="#!">Generar informe de deudores</a></li>
@@ -50,10 +50,10 @@
             <div class="center-align">
                 <div class="row">
                     <div class="col s9 offset-s1">
-                        <div class="card">
+                        <div class="card" style="width: 750px">
                             <div class="card-content">
                                 <a>PRUEBA</a>
-                                <p:schedule value="#{scheduleView.eventModel}" id="Agenda" view="agendaWeek" allDaySlot="false" widgetVar="myschedule" timeZone="GMT+2">                                  
+                                <p:schedule value="#{scheduleView.eventModel}" id="Agenda" view="agendaWeek" allDaySlot="false" widgetVar="myschedule" timeZone="GMT+2" >                                  
 
                                 </p:schedule>
 
