--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -26,7 +26,17 @@
         <br />
         <h:link outcome="programaLab" value="Programar Laboratorio" />
         <br/>
-        <h:link outcome="generarReportes" value="Pantalla del joven Isaac"/>
+        <h:link outcome="generarReportes" value="Reportes de Laboratorios"/>
+        <br/>
+        <h:link outcome="registrarDeudor" value="Deudor"/>
+        <br/>
+        <h:link outcome="cancelarDeuda" value="Cancelar Deuda"/>
+        <br/>
+        <h:link outcome="solicitarInsumos" value="Solicitud de Insumos"/>
+        <br/>
+        <h:link outcome="solicitarLaboratorios" value="Solicitud de laboratorios"/>
+        <br/>
+        <h:link outcome="conogramaLaboratorios" value="Conograma de Laboratorios"/>
     </h:body>
 </html>
 
